fixed sonar-project.properties for sonarcloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=elio42_Glich_Poker_Frontend
-sonar.organization=elio42
+sonar.projectKey=GlichPoker_Glich_Poker_Frontend
+sonar.organization=glichpoker
 
 
 # This is the name and version displayed in the SonarCloud UI.
