--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@tailwindcss/postcss": "^4.0.17",
+    "axios": "^1.8.4",
     "next": "15.1.7",
     "node-localstorage": "^3.0.5",
     "postcss": "^8.5.3",
