--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@tailwindcss/postcss": "^4.0.17",
     "axios": "^1.8.4",
-    "next": "^15.3.1",
+    "next": "15.1.7",
     "node-localstorage": "^3.0.5",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
