--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "next": "15.1.7",
     "node-localstorage": "^3.0.5",
+    "openmeteo": "^1.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
