some changes to the userProfileCard

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/postcss": "^4.0.17",
     "axios": "^1.8.4",
+    "countup": "^1.8.2",
     "next": "15.1.7",
     "node-localstorage": "^3.0.5",
     "openmeteo": "^1.2.0",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^4.0.17"
